[gd_scene load_steps=8 format=3 uid="uid://blplsxu77noo5"]

[ext_resource type="StyleBox" uid="uid://d1xmdsfvcu5yl" path="res://addons/TweenSuite/TweenAnimationEditor/GUIComponents/Panel.tres" id="1_oiwl2"]
[ext_resource type="Script" path="res://addons/TweenSuite/TweenAnimationEditor/EditorComponents/TweenerEditor.gd" id="1_vmb5y"]
[ext_resource type="Script" path="res://addons/TweenSuite/TweenAnimationEditor/GUIComponents/FormatLabel.gd" id="2_20eyb"]
[ext_resource type="Script" path="res://addons/TweenSuite/TweenAnimationEditor/GUIComponents/EditorButton.gd" id="2_kbpp4"]
[ext_resource type="Script" path="res://addons/TweenSuite/TweenAnimationEditor/GUIComponents/ExpressionEdit.gd" id="3_iulab"]
[ext_resource type="PackedScene" uid="uid://c5al8etaem6a6" path="res://addons/TweenSuite/TweenAnimationEditor/GUIComponents/ObjectEdit.tscn" id="4_ccge7"]
[ext_resource type="PackedScene" uid="uid://dkuqneh7wwwbj" path="res://addons/TweenSuite/TweenAnimationEditor/GUIComponents/PropertyEdit.tscn" id="5_dogfc"]

[node name="TweenerEditor" type="PanelContainer"]
custom_minimum_size = Vector2(300, 0)
offset_right = 262.0
offset_bottom = 378.0
size_flags_vertical = 0
theme_override_styles/panel = ExtResource("1_oiwl2")
script = ExtResource("1_vmb5y")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="ID" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 0, 1)
layout_mode = 2
size_flags_horizontal = 0
text = "#%d"
horizontal_alignment = 1
script = ExtResource("2_20eyb")

[node name="Type" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 1

[node name="Button" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
script = ExtResource("2_kbpp4")
icon_name = &"Remove"

[node name="PropertyTweener" type="GridContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/PropertyTweener"]
layout_mode = 2
text = "Object"

[node name="Object" parent="VBoxContainer/PropertyTweener" instance=ExtResource("4_ccge7")]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/PropertyTweener"]
layout_mode = 2
text = "Property"

[node name="Property" parent="VBoxContainer/PropertyTweener" node_paths=PackedStringArray("object_edit") instance=ExtResource("5_dogfc")]
layout_mode = 2
object_edit = NodePath("../Object")

[node name="Label3" type="Label" parent="VBoxContainer/PropertyTweener"]
layout_mode = 2
text = "Final Value"

[node name="FinalValue" type="LineEdit" parent="VBoxContainer/PropertyTweener"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("3_iulab")

[node name="Label4" type="Label" parent="VBoxContainer/PropertyTweener"]
layout_mode = 2
text = "Duration"

[node name="Duration" type="SpinBox" parent="VBoxContainer/PropertyTweener"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1e+06
step = 0.001
value = 1.0
suffix = "s"
custom_arrow_step = 0.1

[node name="Label10" type="Label" parent="VBoxContainer/PropertyTweener"]
layout_mode = 2
text = "Relative"

[node name="Relative" type="CheckBox" parent="VBoxContainer/PropertyTweener"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label8" type="Label" parent="VBoxContainer/PropertyTweener"]
layout_mode = 2
text = "Ease"

[node name="Ease" type="OptionButton" parent="VBoxContainer/PropertyTweener"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label9" type="Label" parent="VBoxContainer/PropertyTweener"]
layout_mode = 2
text = "Transition"

[node name="Transition" type="OptionButton" parent="VBoxContainer/PropertyTweener"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label6" type="Label" parent="VBoxContainer/PropertyTweener"]
layout_mode = 2
text = "From Current"

[node name="FromCurrent" type="CheckBox" parent="VBoxContainer/PropertyTweener"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label5" type="Label" parent="VBoxContainer/PropertyTweener"]
layout_mode = 2
text = "From"

[node name="From" type="LineEdit" parent="VBoxContainer/PropertyTweener"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("3_iulab")

[node name="Label7" type="Label" parent="VBoxContainer/PropertyTweener"]
layout_mode = 2
text = "Delay"

[node name="Delay" type="SpinBox" parent="VBoxContainer/PropertyTweener"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1e+06
step = 0.001
suffix = "s"
custom_arrow_step = 0.1

[node name="IntervalTweener" type="GridContainer" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/IntervalTweener"]
layout_mode = 2
size_flags_horizontal = 3
text = "Time"

[node name="Time" type="SpinBox" parent="VBoxContainer/IntervalTweener"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1e+06
step = 0.001
value = 1.0
suffix = "s"
custom_arrow_step = 0.1

[node name="CallbackTweener" type="GridContainer" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/CallbackTweener"]
layout_mode = 2
size_flags_horizontal = 3
text = "Object"

[node name="Object" parent="VBoxContainer/CallbackTweener" instance=ExtResource("4_ccge7")]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/CallbackTweener"]
layout_mode = 2
size_flags_horizontal = 3
text = "Method"

[node name="Method" type="LineEdit" parent="VBoxContainer/CallbackTweener"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label3" type="Label" parent="VBoxContainer/CallbackTweener"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "Binds"

[node name="Label4" type="Label" parent="VBoxContainer/CallbackTweener"]
layout_mode = 2
size_flags_horizontal = 3
text = "Delay"

[node name="Delay" type="SpinBox" parent="VBoxContainer/CallbackTweener"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1e+06
step = 0.001
suffix = "s"
custom_arrow_step = 0.1

[node name="MethodTweener" type="GridContainer" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/MethodTweener"]
layout_mode = 2
size_flags_horizontal = 3
text = "Object"

[node name="Object" parent="VBoxContainer/MethodTweener" instance=ExtResource("4_ccge7")]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/MethodTweener"]
layout_mode = 2
size_flags_horizontal = 3
text = "Method"

[node name="Method" type="LineEdit" parent="VBoxContainer/MethodTweener"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label3" type="Label" parent="VBoxContainer/MethodTweener"]
layout_mode = 2
size_flags_horizontal = 3
text = "From"

[node name="From" type="LineEdit" parent="VBoxContainer/MethodTweener"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("3_iulab")

[node name="Label4" type="Label" parent="VBoxContainer/MethodTweener"]
layout_mode = 2
size_flags_horizontal = 3
text = "To"

[node name="To" type="LineEdit" parent="VBoxContainer/MethodTweener"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("3_iulab")

[node name="Label5" type="Label" parent="VBoxContainer/MethodTweener"]
layout_mode = 2
size_flags_horizontal = 3
text = "Duration"

[node name="Duration" type="SpinBox" parent="VBoxContainer/MethodTweener"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1e+06
step = 0.001
value = 1.0
suffix = "s"
custom_arrow_step = 0.1

[node name="Label6" type="Label" parent="VBoxContainer/MethodTweener"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ease"

[node name="Ease" type="OptionButton" parent="VBoxContainer/MethodTweener"]
layout_mode = 2

[node name="Label7" type="Label" parent="VBoxContainer/MethodTweener"]
layout_mode = 2
size_flags_horizontal = 3
text = "Transition"

[node name="Transition" type="OptionButton" parent="VBoxContainer/MethodTweener"]
layout_mode = 2

[node name="Label8" type="Label" parent="VBoxContainer/MethodTweener"]
layout_mode = 2
size_flags_horizontal = 3
text = "Delay"

[node name="Delay" type="SpinBox" parent="VBoxContainer/MethodTweener"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1e+06
step = 0.001
suffix = "s"
custom_arrow_step = 0.1

[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/Button" to="." method="delete_me"]
[connection signal="toggled" from="VBoxContainer/PropertyTweener/FromCurrent" to="." method="from_current_toggled"]
